--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-	<title>Porto - Photo Gallery HTML Template</title>
+	<title>Kainos - Lawrence's Portfolio</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="Porto Photo Gallery HTML Template">
 	<meta name="keywords" content="porto, photo, html">
