--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
 			</div>
 			<!-- menu -->
 			<ul class="main-menu">
-				<li><a href="index.html">Home</a></li>
+				<!-- <li><a href="index.html">Home</a></li> -->
 				<li><a href="home-2.html">About Me</a></li>
 				<li><a href="portfolio.html">Portfolio</a></li>
 				<li><a href="contact.html">Contact</a></li>
@@ -64,7 +64,7 @@
 	<section class="contact-page set-bg" data-setbg="img/contact-bg.jpg">
 		<div class="sp-container">
 			<div class="row">
-				<div class="col-lg-4">
+				<!-- <div class="col-lg-4">
 					<div class="contact-text text-white">
 						<h2>Do not hesitate to say hello</h2>
 						<p>Do not hesitate to say hello</p>
@@ -74,8 +74,20 @@
 							<li><h6>Mail:</h6>kainos5025@gmail.com</li>
 						</ul>
 					</div>
-				</div>
+				</div> -->
 				<div class="col-lg-7 offset-lg-1">
+					<div class="contact-text text-white">
+						<h2>Tell me about your dream.</h2>
+						<p>Do not hesitate to say hello</p>
+						<ul>
+							<li><h6>Address:</h6>Seoul, Republic of Korea</li>
+							<li><h6>Phone:</h6>+82 10 4678 0327</li>
+							<li><h6>Mail:</h6>kainos5025@gmail.com</li>
+						</ul>
+					</div>
+				</div>
+
+				<!-- <div class="col-lg-7 offset-lg-1">
 					<form class="contact-form">
 						<div class="row">
 							<div class="col-md-6">
@@ -91,7 +103,7 @@
 							</div>
 						</div>
 					</form>
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</section>
