--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			</div>
 			<!-- menu -->
 			<ul class="main-menu">
-				<li><a href="index.html">Home</a></li>
+				<!-- <li><a href="index.html">Home</a></li> -->
 				<li><a href="home-2.html">About Me</a></li>
 				<li><a href="portfolio.html">Portfolio</a></li>
 				<!-- <li><a href="blog.html">News</a></li> -->
