--- a/index.html
+++ b/index.html
@@ -42,12 +42,10 @@
 				<img src="img/logo.png" alt="">
 			</a>
 			<div class="header-social">
-				<!-- <a href=""><i class="fa fa-pinterest"></i></a> -->
-				<a href=""><i class="fa fa-facebook"></i></a>
-				<a href=""><i class="fa fa-instagram"></i></a>
-				<!-- <a href=""><i class="fa fa-twitter"></i></a> -->
-				<!-- <a href=""><i class="fa fa-dribbble"></i></a> -->
-				<!-- <a href=""><i class="fa fa-behance"></i></a> -->
+				<a href="https://www.facebook.com/jaewonstyle" target="_blank"><i class="fa fa-facebook"></i></a>
+				<a href="https://www.instagram.com/kainos_n" target="_blank"><i class="fa fa-instagram"></i></a>
+				<a href="https://www.linkedin.com/in/lawrencebang" target="_blank"><i class="fa fa-linkedin"></i></a>
+				<a href="https://www.dropbox.com/s/l00u7i7wnm2j8cu/Lawrence.docx?dl=0" target="_blank"><i class="fa fa-file"></i></a>
 			</div>
 			<div class="nav-switch">
 				<i class="fa fa-bars"></i>
