--- a/portfolio.html
+++ b/portfolio.html
@@ -3,8 +3,8 @@
 <head>
 	<title>Kainos - Lawrence's Portfolio</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="Porto Photo Gallery HTML Template">
-	<meta name="keywords" content="porto, photo, html">
+	<meta name="description" content="Lawrence's Portfolio">
+	<meta name="keywords" content="lawrence, portfolio, front-end, webdesigner">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->
 	<link href="img/favicon.ico" rel="shortcut icon"/>
@@ -43,8 +43,10 @@
 				<img src="img/logo.png" alt="">
 			</a>
 			<div class="header-social">
-				<a href=""><i class="fa fa-facebook"></i></a>
-				<a href=""><i class="fa fa-instagram"></i></a>
+				<a href="https://www.facebook.com/jaewonstyle" target="_blank"><i class="fa fa-facebook"></i></a>
+				<a href="https://www.instagram.com/kainos_n" target="_blank"><i class="fa fa-instagram"></i></a>
+				<a href="https://www.linkedin.com/in/lawrencebang" target="_blank"><i class="fa fa-linkedin"></i></a>
+				<a href="https://www.dropbox.com/s/l00u7i7wnm2j8cu/Lawrence.docx?dl=0" target="_blank"><i class="fa fa-file"></i></a>
 			</div>
 			<div class="nav-switch">
 				<i class="fa fa-bars"></i>
@@ -79,7 +81,7 @@
 				</div>                                                                
 			</div>
 			<!-- Item -->
-			<a href="portfolio-single.html" class="grid-item mix portfolio-item __big set-bg develop" data-setbg="img/portfolio/1.jpg"></a>
+			<a href="dev-mit.html" class="grid-item mix portfolio-item __big set-bg develop" data-setbg="img/portfolio/1.jpg"></a>
 			<!-- Item -->
 			<a href="portfolio-single.html" class="grid-item mix portfolio-item set-bg design" data-setbg="img/portfolio/2.jpg"></a>
 			<!-- Item -->
